syntax = "proto3";

package department.v1;
import "errors/errors.proto";

option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/department/v1;departmentv1";

enum DepartmentErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

   GET_DEPARTMENT_ERROR = 0 [(errors.code) = 501];
  DEL_DEPARTMENT_ERROR = 1 [(errors.code) = 502];
  SAVE_DEPARTMENT_ERROR = 2 [(errors.code) = 503];
}
